--- a/instaapp/templates/users/register.html
+++ b/instaapp/templates/users/register.html
@@ -1,3 +1,10 @@
+{% if messsages %}
+{% for message in messages %}
+    <div class="alert alert-{{message.tags}}">
+        {{message}}
+    </div>
+{% endfor %}
+{% endif%}
 {% block content %}
 
     <div class="content-section">
