crete forms.py, add UserRegistrationForm class

--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -1,4 +1,12 @@
+
 {% block content %}
+{% if messsages %}
+{% for message in messages %}
+    <div class="alert alert-{{message.tags}}">
+        {{message}}
+    </div>
+{% endfor %}
+{% endif%}
 
 <h1>Welcome to InstaClone</h1>
 
