--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -1,12 +1,7 @@
+{%extends 'base.html'%}
 
 {% block content %}
-{% if messsages %}
-{% for message in messages %}
-    <div class="alert alert-{{message.tags}}">
-        {{message}}
-    </div>
-{% endfor %}
-{% endif%}
+{{block.super}}
 
 <h1>Welcome to InstaClone</h1>
 
