--- a/instaapp/templates/users/register.html
+++ b/instaapp/templates/users/register.html
@@ -1,12 +1,10 @@
+{%extends 'base.html'%}
+{%load crispy_forms_tags%}
+
 
 {% block content %}
-{% if messsages %}
-{% for message in messages %}
-    <div class="alert alert-{{message.tags}}">
-        {{message}}
-    </div>
-{% endfor %}
-{% endif%}
+{{block.super}}
+
 
     <div class="content-section">
 
@@ -14,7 +12,7 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
-                {{ form.as_p }}
+                {{ form|crispy }}
             </fieldset>
             <div class="from-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
