--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -11,7 +11,37 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="{% url 'index' %}">InstaClone</a>
     </div>
+    <div class="navbar-nav">
+        {% if user.is_authenticated %}
+        <li>
+            <a class="btn" href="{%url 'profile'%}">Profile</a>
+          </li>
+
+          <li>
+            <a class="btn" href="{%url 'logout'%}">Logout</a>
+          </li>
+
+
+        {% else %}
+        <li>
+          <a class="btn" href="{%url 'login'%}">Login</a>
+        </li>
+
+        {% endif %}
+      </div>
+
+
+
+
+
+
+
+
+
   </div>
 </nav>
+
+
+
 </body>
 </html>
