--- a/instaapp/templates/users/profile.html
+++ b/instaapp/templates/users/profile.html
@@ -11,7 +11,23 @@
           <p class="text-secondary">{{ user.email }}</p>
         </div>
       </div>
-      <!-- FORM HERE -->
+
+
+      <form method="POST">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Join Today</legend>
+            {{ form|crispy }}
+        </fieldset>
+        <div class="from-group">
+            <button class="btn btn-outline-info" type="submit">Sign Up</button>
+        </div>
+    </form>
+
+
+
+
+
     </div>
 {% endblock content %}
 
