--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -1,8 +1,51 @@
 {%extends 'base.html'%}
+{%load crispy_forms_tags%}
+
 
 {% block content %}
 {{block.super}}
 
 <h1>Welcome to InstaClone</h1>
+<h2>Upload pics! coming soon...</h2>
+
+
+<div class="container">
+    <div class="row">
+    {% for image in images %}
+    <div class="col-md-4 mt-4">
+      <div class="card zoom">
+            <img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image">
+      </div>
+    </div>
+    {% endfor %}
+
+  </div>
+</div>
+
+
+
+
+
+
+
+
+{%load cloudinary%}
+
+<form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Upload Pic</legend>
+
+        {{ form|crispy }}
+
+    </fieldset>
+    <div class="from-group">
+        <button class="btn btn-outline-info" type="submit">Upload</button>
+    </div>
+</form>
+
+
 
 {% endblock %}
+
+
