--- a/instaapp/templates/users/profile.html
+++ b/instaapp/templates/users/profile.html
@@ -1,7 +1,6 @@
 {%extends 'base.html'%}
-
-
 {% load crispy_forms_tags %}
+
 {% block content %}
     <div class="content-section">
       <div class="media">
@@ -13,14 +12,17 @@
       </div>
 
 
-      <form method="POST">
+      <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Join Today</legend>
-            {{ form|crispy }}
+            <legend class="border-bottom mb-4">Profile Info</legend>
+
+            {{ u_form|crispy }}
+            {{ p_form|crispy }}
+
         </fieldset>
         <div class="from-group">
-            <button class="btn btn-outline-info" type="submit">Sign Up</button>
+            <button class="btn btn-outline-info" type="submit">Update</button>
         </div>
     </form>
 
