--- a/instaapp/templates/users/update.html
+++ b/instaapp/templates/users/update.html
@@ -1,11 +1,45 @@
 {%extends 'base.html'%}
-
+{% load crispy_forms_tags %}
 
 {% block content %}
-{{block.super}}
+    <div class="content-section">
+      <div class="media">
+        <img class="rounded-circle account-img" src="{{user.profile.profile_photo.url}}" style="width:200px">
+        <div class="media-body">
+          <h2 class="account-heading">{{ user.username }}</h2>
+          <p class="text-secondary">{{ user.email }}</p>
+        </div>
+      </div>
 
-<h1>{{ user.username }}</h1>
 
-<h2>Update pic</h2>
+      <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <fieldset class="form-group">
+            <legend class="border-bottom mb-4">Profile Info</legend>
 
-{% endblock %}
+            {{ u_form|crispy }}
+            {{ p_form|crispy }}
+
+        </fieldset>
+        <div class="from-group">
+            <button class="btn btn-outline-info" type="submit">Update</button>
+        </div>
+    </form>
+
+
+    
+
+
+
+
+
+    </div>
+{% endblock content %}
+
+
+
+
+
+
+
+    
