--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -6,7 +6,7 @@
 {{block.super}}
 
 <h1>Welcome to InstaClone</h1>
-<h2>Upload pics! coming soon...</h2>
+<h2>Upload pics below! </h2>
 
 
 <div class="container">
@@ -14,7 +14,7 @@
     {% for image in images %}
     <div class="col-md-4 mt-4">
       <div class="card zoom">
-            <img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image">
+        <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image"></a>
       </div>
     </div>
     {% endfor %}
