link caption and pub date fields to profile and index.html

--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -13,8 +13,14 @@
     <div class="row">
     {% for image in images %}
     <div class="col-md-4 mt-4">
+        <p>{{image.user.user.username|title}}</p>
+
       <div class="card zoom">
             <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image"></a>
+            <p>{{image.image_caption}}</p>
+            <p>Posted on: {{image.pub_date}}</p> <br><br>
+
+
 
 
             
