--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -31,7 +31,16 @@
       </div>
 
 
-
+      <div class="col-sm-4 col-md-4 navbar-right">
+        <form class="navbar-form" role="search" action="{% url 'search' %}">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search Profiles" name="image">
+            <div class="input-group-btn">
+              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+            </div>
+          </div>
+        </form>
+      </div>
 
 
 
