--- a/instaapp/templates/users/profile.html
+++ b/instaapp/templates/users/profile.html
@@ -35,8 +35,8 @@
         <div class="col-md-4 mt-4">
           <div class="card zoom">
                 <img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image">
-                <p>{{image.image_caption}}</p>
-            <p>Posted on: {{image.pub_date}}</p> <br><br>
+                <p>Caption: {{image.image_caption}}</p>
+                <p>Posted on: {{image.pub_date}}</p> <br><br>
           </div>
         </div>
         {% endfor %}
