--- a/instaapp/templates/users/user_profile.html
+++ b/instaapp/templates/users/user_profile.html
@@ -25,8 +25,10 @@
                                 
                             </div>
                         </div>
+                        <p>popopopo</p>
 
                         <div class="post-details mt-3 mb-3">
+
                             <span class="mr-5"><strong>{{user_images.count}}</strong> Posts</span>
                             <span class="mr-5"> <strong>{{ user_prof.profile.followers.count }}</strong> followers</span>
                             <span class="mr-5"> <strong>{{ user_prof.profile.following.count }}</strong> following</span>
@@ -38,23 +40,50 @@
             </div>
         </div>
     </div>
-    <hr class="mt-4">
+
+
+    <div class="container">
+        <div class="row">
+            {% for image in user_images %}
+            <div class="col-md-4 mt-4">
+            <p>{{image.user.user.username|title}}</p>
+    
+          <div class="card zoom">
+                <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image"></a>
+                <p>Caption: {{image.image_caption}}</p>
+                <p>Posted on: {{image.pub_date}}</p> <br><br>
+                
+          </div>
+        </div>
+        {% endfor %}
+    
+      </div>
+    </div>
+    
+
+
+
+
+
+
+
+    <!-- <hr class="mt-4">
     <div class="card-columns">
         {% for image in user_images %}
         <div class="card">
             <div class="card-body parent ">
                 <div class="im">
-                <img src="{{image.image.url}}" alt="{{image.caption}}" class="card-img">
+                <img src="{{image.gallery_image.url}}" alt="{{image.image_caption}}" class="card-img">
                 <p id="overlay"class="text"> 
-                    <i class="fas fa-heart" style="color:white; font-size: 18"></i> 
-                    <span style="color: white">{{image.likes.count}}</span>
-                     <i class="fas fa-comment ml-4" style="color: white"></i> <span style="color: white">{{image.comments.count}}</span></p>
+                    <i class="fas fa-heart" style="color:; font-size: 18"></i> 
+                    <span style="color: ">{{image.likes.count}}</span>
+                     <i class="fas fa-comment ml-4" style="color: white"></i> <span style="color: ">{{image.comments.count}}</span></p>
             
                     </div>
                     </div>
         </div>
         {% endfor %}
     </div>
-</div>
+</div> -->
 
 {% endblock %}
