--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -32,7 +32,7 @@
 
 
       <div class="col-sm-4 col-md-4 navbar-right">
-        <form class="navbar-form" role="search" action="{% url 'search' %}">
+        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
           <div class="input-group">
             <input type="text" class="form-control" placeholder="Search Profiles" name="image">
             <div class="input-group-btn">
