--- a/instaapp/templates/search.html
+++ b/instaapp/templates/search.html
@@ -19,26 +19,26 @@
 <div class="container">
 
   <div class="row text-center">
-    {% if searched_profiles%}
-      <h2>Found {{ searched_profiles|length }} of searched term {{message}}</h2>
+    {% if profiles%}
+      <h2>Found {{ profiles|length }} of searched term {{message}}</h2>
     {% else %}
-      <h2> Found 0 images for the search term {{message}}</h2>
+      <h2> Found 0 profiles for the search term {{message}}</h2>
     {% endif %}
 
   </div>
 
   <div class="row">
 
-  {% if searched_profiles %}
+  {% if profiles %}
   <div class="container">
     <div class="row">
-    {% for searched_profiles in searched_profiles %}
+    <!-- {% for profile in profiles %}
     <div class="col-md-4 mt-3">
       <div class="card zoom">
             <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image"></a>
       </div>
     </div>
-    {% endfor %}
+    {% endfor %} -->
 
   </div>
 </div>
