--- a/instaapp/templates/users/profile.html
+++ b/instaapp/templates/users/profile.html
@@ -12,8 +12,8 @@
       </div>
 
 
-      <!-- <span class="mr-5"> <strong>{{ user.profile.followers.count }}</strong> followers</span>
-                                <span class="mr-5"> <strong>{{ user.profile.following.count }}</strong> following</span> -->
+      <span class="mr-5"> <strong>{{ user.profile.followers.count }}</strong> followers</span>
+                                <span class="mr-5"> <strong>{{ user.profile.following.count }}</strong> following</span>
 
 
       <div class="border-top pt-3">
