--- a/instaapp/templates/users/user_profile.html
+++ b/instaapp/templates/users/user_profile.html
@@ -25,9 +25,8 @@
                                 
                             </div>
                         </div>
-                        <p>popopopo</p>
 
-                        <div class="post-details mt-3 mb-3">
+                        <div class="user-details mt-3 mb-3">
 
                             <span class="mr-5"><strong>{{user_images.count}}</strong> Posts</span>
                             <span class="mr-5"> <strong>{{ user_prof.profile.followers.count }}</strong> followers</span>
