--- a/instaapp/templates/search.html
+++ b/instaapp/templates/search.html
@@ -34,8 +34,10 @@
     <div class="row">
     {% for profile in profiles %}
     <div class="col-md-4 mt-3">
-      <div class="card zoom">
-           <img src="{{profile.user.profile.profile_photo.url}}" style="width:200px">
+        
+      <div class="card">
+          
+           <img src="{{profile.user.profile.profile_photo.url}}" style="width:200px"></a>
         <div class="media-body">
           <h2 class="account-heading">{{ profile.user.username }}</h2>
           <p class="text-secondary">{{ profile.user.email }}</p>
