--- a/instaapp/templates/base.html
+++ b/instaapp/templates/base.html
@@ -1,4 +1,3 @@
-{% load bootstrap3 %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -13,8 +12,9 @@
   {% endif %}
 
   {% block styles %}
-    {% bootstrap_css %}
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/baseapp.css' %}">
+
 
   {% endblock %}
 
@@ -34,10 +34,7 @@
     {% block content %}  {%endblock%}
 
 
-    {% block scripts %}
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-     {% bootstrap_javascript %}
-    {% endblock %}
+    
 
 </body>
 </html>
