--- a/instaapp/templates/navbar.html
+++ b/instaapp/templates/navbar.html
@@ -1,43 +1,26 @@
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="{% url 'index' %}">InstaClone</a>
-    </div>
-    <div class="navbar-nav">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="{% url 'index' %}">Instaclone</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         {% if user.is_authenticated %}
-        <li>
-            <a class="btn" href="{%url 'profile'%}">Profile</a>
-          </li>
-
-          <li>
-            <a class="btn" href="{%url 'logout'%}">Logout</a>
-          </li>
-
-
-        {% else %}
-        <li>
-          <a class="btn" href="{%url 'login'%}">Login</a>
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="{%url 'profile'%}">Profile <span class="sr-only">(current)</span></a>
         </li>
-
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'logout'%}">Logout</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+            <a class="nav-link" href="{%url 'login'%}">Logout</a>
+        </li>
         {% endif %}
-      </div>
-
-
-      <div class="col-sm-4 col-md-4 navbar-right">
-        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Profiles" name="profile">
-            <div class="input-group-btn">
-              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-            </div>
-          </div>
-        </form>
-      </div>
-
-
-
-
-
-
-  </div>
-</nav>
+      </ul>
+      <form class="form-inline my-2 my-lg-0" role="search" action="{% url 'search_results' %}">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search Users" aria-label="Search" name="profile">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
