--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -1,57 +1,18 @@
 {%extends 'base.html'%}
 {%load crispy_forms_tags%}
-{% load static%}
+{%load static%}
 
 
 
 {% block content %}
 {{block.super}}
 
-<h1>Welcome to InstaClone</h1>
-<h2>Upload pics below! </h2>
-
-
 <div class="container">
-    {% for image in images %}
-    <div class="card mb-4">
-        <p>{{image.user.user.username|title}}</p>
-        <img src="{{image.user.profile_photo.url}}" class="rounded-circle"
-        alt="image" width="35" height="35">
-
-        
-
-      <div class="card zoom">
-            <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:50%;height:40%;" class="img-responsive" alt="Image"></a>
-            <p>Caption: {{image.image_caption}}</p>
-            <p>Posted on: {{image.pub_date}}</p> 
-            <a href=" {% url 'comment' image_id=image.id %}"><i class="fa fa-comment fa-2x"></i>Comment</a>
-            <br><br>
-
-            {% for comment in comments %}
-                            {% if comment.image_id == image.id%}
-                           
-                            <h5><strong>{{comment.user}}</strong> {{comment.comment}}</h5>
-                            <p>{{comment.posted | timesince}}</p>
-                            <hr>
-    
-                            {% endif %}
-                            {% endfor %}
-            
-      </div>
-    </div>
-    {% endfor %}
-
-  </div>
-</div>
-
-
-
-
-
+    <div class="row">
+        <div class="col-md-3">
             <div class="card-title text-secondary mt-2 mr-2 ml-2 ">Suggestions</div>
             {% for user in users %}
-            <div class="container">
-                <div class="row">
+          
                     <div class="col-md-2 mr-3 mt-1 mb-2">
                         <img class="rounded-circle" src="{{ user.profile.profile_picture.url }}"
                              width="45px" height="45px">
@@ -61,10 +22,71 @@
                     </div>
                     <div class="col-md-4">
                     </div>
-                </div>
-            </div>
+          
+            {% endfor %}</div>   
+        <div class="col-md-6">    
+ 
+        {% for image in images %}
 
-            {% endfor %}
+
+                    <div class="card mb-4 border">
+                        <div class="card-title">
+                        <img src="{{image.user.profile_photo.url}}" class="rounded-circle border-bottom"
+                        alt="image" width="35" height="35">
+                        <a href="{% url 'user_profile' image.user.user.username  %}" class="mt-4 user">{{image.user.user.username|title}}</a>
+                    </div>
+
+
+        
+
+                    <div class="card-body mb-4">
+                            <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;" class="card-img" alt="Image"></a>
+                            <br><br>
+                            <p><strong>Caption:</strong> {{image.image_caption}}</p>
+                            <p><strong>Posted:</strong> {{image.pub_date}}</p> 
+                            <p><strong>Comments:</strong></p>
+                            
+
+                            {% for comment in comments %}
+                            {% if comment.image_id == image.id%}
+                            <h5><strong>{{comment.user}}</strong> {{comment.comment}}</h5>
+                            <p>{{comment.posted | timesince}}</p><hr>
+                            {% endif %}
+                            {% endfor %}
+                            <a href=" {% url 'comment' image_id=image.id %}"><i class="fa fa-comment fa-2x"></i>Add a comment</a><br><br>
+                    </div>
+                    </div>
+
+    {% endfor %}
+</div>
+
+
+<div class="col-md-4">
+  {% for user in users %}
+  <div class="card-title text-secondary mt-2 mr-2 ml-2 ">Suggestions</div>
+
+          <div class="col-md-2 mr-3 mt-1 mb-2">
+              <img class="rounded-circle" src="{{ user.profile.profile_picture.url }}"
+                   width="45px" height="45px">
+          </div>
+          <div class="col-md-6 mr-2 mt-2">
+              <span><a href="{% url 'user_profile' user.username  %}">{{user.username}}</a></span>
+          </div>
+          <div class="col-md-4">
+          </div>
+
+  {% endfor %}
+</div>
+
+</div>
+
+</div>
+
+</div>
+
+
+
+            
     
 
 
