edit image.html to better hold images

--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -1,114 +1,60 @@
 {%extends 'base.html'%}
 {%load crispy_forms_tags%}
 {%load static%}
-
-
-
-{% block content %}
+{%load cloudinary%}
+{%block content %}
 {{block.super}}
-
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="card-title text-secondary mt-2 mr-2 ml-2 ">Suggestions</div>
             {% for user in users %}
-          
-                    <div class="col-md-2 mr-3 mt-1 mb-2">
-                        <img class="rounded-circle" src="{{ user.profile.profile_picture.url }}"
-                             width="45px" height="45px">
-                    </div>
-                    <div class="col-md-6 mr-2 mt-2">
-                        <span><a href="{% url 'user_profile' user.username  %}">{{user.username}}</a></span>
-                    </div>
-                    <div class="col-md-4">
-                    </div>
-          
-            {% endfor %}</div>   
-        <div class="col-md-6">    
- 
+            <div class="col-md-2 mr-3 mt-1 mb-2">
+                <img class="rounded-circle" src="{{ user.profile.profile_picture.url }}" width="45px" height="45px">
+            </div>
+            <div class="col-md-6 mr-2 mt-2">
+                <span><a href="{% url 'user_profile' user.username  %}">{{user.username}}</a></span>
+            </div>
+            <div class="col-md-4"></div>
+            {% endfor %}
+            </div>   
+        <div class="col-md-7"> 
         {% for image in images %}
-
-
-                    <div class="card mb-4 border">
-                        <div class="card-title">
-                        <img src="{{image.user.profile_photo.url}}" class="rounded-circle border-bottom"
-                        alt="image" width="35" height="35">
-                        <a href="{% url 'user_profile' image.user.user.username  %}" class="mt-4 user">{{image.user.user.username|title}}</a>
-                    </div>
-
-
-        
-
-                    <div class="card-body mb-4">
-                            <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;" class="card-img" alt="Image"></a>
-                            <br><br>
-                            <p><strong>Caption:</strong> {{image.image_caption}}</p>
-                            <p><strong>Posted:</strong> {{image.pub_date}}</p> 
-                            <p><strong>Comments:</strong></p>
-                            
-
-                            {% for comment in comments %}
-                            {% if comment.image_id == image.id%}
-                            <h5><strong>{{comment.user}}</strong> {{comment.comment}}</h5>
-                            <p>{{comment.posted | timesince}}</p><hr>
-                            {% endif %}
-                            {% endfor %}
-                            <a href=" {% url 'comment' image_id=image.id %}"><i class="fa fa-comment fa-2x"></i>Add a comment</a><br><br>
-                    </div>
-                    </div>
-
-    {% endfor %}
-</div>
-
-
-<div class="col-md-4">
-  {% for user in users %}
-  <div class="card-title text-secondary mt-2 mr-2 ml-2 ">Suggestions</div>
-
-          <div class="col-md-2 mr-3 mt-1 mb-2">
-              <img class="rounded-circle" src="{{ user.profile.profile_picture.url }}"
-                   width="45px" height="45px">
-          </div>
-          <div class="col-md-6 mr-2 mt-2">
-              <span><a href="{% url 'user_profile' user.username  %}">{{user.username}}</a></span>
-          </div>
-          <div class="col-md-4">
-          </div>
-
-  {% endfor %}
-</div>
-
-</div>
-
-</div>
-
-</div>
-
-
-
-            
-    
-
-
-
-
-{%load cloudinary%}
-
-<form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <fieldset class="form-group">
-        <legend class="border-bottom mb-4">Upload Pic</legend>
-
-        {{ form|crispy }}
-
-    </fieldset>
-    <div class="from-group">
-        <button class="btn btn-outline-info" type="submit">Upload</button>
+            <div class="card mb-4 border">
+                <div class="card-title">
+                <img src="{{image.user.profile_photo.url}}" class="rounded-circle border-bottom"
+                alt="image" width="35" height="35">
+                <a href="{% url 'user_profile' image.user.user.username  %}" class="mt-4 user">{{image.user.user.username|title}}</a>
+            </div>
+            <div class="card-body mb-4">
+                <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;" class="card-img" alt="Image"></a>
+                    <br><br>
+                    <p><strong>Caption:</strong> {{image.image_caption}}</p>
+                    <p><strong>Posted:</strong> {{image.pub_date}}</p> 
+                {% for comment in comments %}
+                    {% if comment.image_id == image.id%}
+                    <p><strong>Comments:</strong></p>
+                        <p><strong>{{comment.user}}:</strong> {{comment.comment}}</p>
+                        <p>{{comment.posted | timesince}}</p><hr>
+                    {% endif %}
+                {% endfor %}
+                <a href=" {% url 'comment' image_id=image.id %}"><i class="fa fa-comment fa-2x"></i>Add a comment</a><br><br>
+            </div>
+            </div>
+        {% endfor %}
+        </div>
+        <div class="col-md-3">
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Upload Pic</legend>
+                        {{ form|crispy }}
+                </fieldset>
+                <div class="from-group">
+                    <button class="btn btn-outline-info" type="submit">Upload</button>
+                </div>
+            </form>
+        </div>
     </div>
-</form>
-
-
-
+</div>
 {% endblock %}
-
-
