--- a/instaapp/templates/image.html
+++ b/instaapp/templates/image.html
@@ -1,25 +1,29 @@
 {%extends 'base.html'%}
-
 {% block content %}
-
- <div class="container">
-   <div class="row">
-       <div class="container text-center">
-     <img src="{{image.gallery_image.url}}"  class="img-responsive" alt="">
-   </div>
-</div>
-   <div class="card text-center">
-    <div class="card-header">
-        <h2 class="text-center">{{image.image_name|title}}</h2>
+<div class="container">
+   <div class="row"><br><br>
+    <div class="card mb-4 border">
+        <div class="card-title">
+        <img src="{{image.user.profile_photo.url}}" class="rounded-circle border-bottom"
+        alt="image" width="35" height="35">
+        <a href="{% url 'user_profile' image.user.user.username  %}" class="mt-4 user">{{image.user.user.username|title}}</a>
     </div>
-    <div class="card-body">
-      <p class="card-text">Caption: {{image.image_caption}}</p><br>
-      <a href="{% url 'index' %}" class="btn btn-primary">Back to HomePage</a>
+    <div class="card-body mb-4">
+        <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;" class="card-img" alt="Image"></a>
+            <br><br>
+            <p><strong>Caption:</strong> {{image.image_caption}}</p>
+            <p><strong>Posted:</strong> {{image.pub_date}}</p> 
+            {% for comment in comments %}
+            {% if comment.image_id == image.id%}
+            <p><strong>Comments:</strong></p>
+            <p><strong>{{comment.user}}:</strong> {{comment.comment}}</p>
+            <p>{{comment.posted | timesince}}</p><hr>
+            {% endif %}
+            {% endfor %}
+        <a href=" {% url 'comment' image_id=image.id %}"><i class="fa fa-comment fa-2x"></i>Add a comment</a><br><br>
+        <a href="{% url 'index' %}" class="btn btn-primary">Back to Home Page</a><br>
     </div>
-    <div class="card-footer text-muted"><br>
-        Posted on: {{image.pub_date}}
     </div>
-  </div>
- </div><br><br><br><br><br>
-
+    </div>
+</div><br><br><br><br><br>
  {% endblock %}
