--- a/instaapp/templates/users/user_profile.html
+++ b/instaapp/templates/users/user_profile.html
@@ -3,86 +3,49 @@
 {% block content %}
 <div class="container" style="margin-top:8%">
     <div class="content-section">
-        <div class="media">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-1"></div>
-                    <div class="col-md-3">
-                        <img class="rounded-circle account-img" src="{{ user_prof.profile.profile_picture.url }}">
-                    </div>
-                    <div class="col-md-6 mt-3">
-                        <div class="media-body">
-                            <div class="account-heading">
-                                <span class="mr-3 text-secondary username">{{ user_prof.username }}</span>
-                                {% if follow_status %}
-                                <a class="btn btn-sm btn-outline-danger ml-5" href="{% url 'unfollow' user_prof.profile.id %}">Unfollow</a>
-
-                                {%else%}
-
-                                <a class="btn btn-sm btn-primary ml-5" href="{% url 'follow' user_prof.profile.id %}">Follow</a>
-                                {% endif %}
-                
-                                
-                            </div>
-                        </div>
-
-                        <div class="user-details mt-3 mb-3">
-
-                            <span class="mr-5"><strong>{{user_images.count}}</strong> Posts</span>
-                            <span class="mr-5"> <strong>{{ user_prof.profile.followers.count }}</strong> followers</span>
-                            <span class="mr-5"> <strong>{{ user_prof.profile.following.count }}</strong> following</span>
-                        </div>
-                        <h5>{{ user.profile.name }}</h5>
-                        <p class="text-secondary">{{ user.profile.bio }}</p>
+    <div class="media">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-3">
+            </div>
+            <div class="col-md-6 mt-3">
+                <div class="media-body">
+                    <div class="account-heading">
+                    <span class="mr-3 text-secondary username">{{ user_prof.username }}</span>
+                    <img class="rounded-circle account-img" src="{{ user_prof.profile.profile_photo.url}}" style="width:80px; height:80px;">
+                        {% if follow_status %}
+                        <a class="btn btn-sm btn-outline-danger ml-5" href="{% url 'unfollow' user_prof.profile.id %}">Unfollow</a>
+                        {%else%}
+                        <a class="btn btn-sm btn-primary ml-5" href="{% url 'follow' user_prof.profile.id %}">Follow</a>
+                        {% endif %}
                     </div>
                 </div>
+                <div class="user-details mt-3 mb-3">
+                    <span class="mr-5"><strong>{{user_images.count}}</strong> Posts</span>
+                    <span class="mr-5"> <strong>{{ user_prof.profile.followers.count }}</strong> followers</span>
+                    <span class="mr-5"> <strong>{{ user_prof.profile.following.count }}</strong> following</span>
+                </div>
+                <h5>{{ user.profile.name }}</h5>
+                <p class="text-secondary">{{ user.profile.bio }}</p>
             </div>
         </div>
     </div>
-
-
-    <div class="container">
-        <div class="row">
-            {% for image in user_images %}
-            <div class="col-md-4 mt-4">
-            <p>{{image.user.user.username|title}}</p>
-    
-          <div class="card zoom">
-                <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image"></a>
-                <p>Caption: {{image.image_caption}}</p>
-                <p>Posted on: {{image.pub_date}}</p> <br><br>
-                
+    </div>
+    </div>
+</div>
+<div class="container">
+    <div class="row">
+        {% for image in user_images %}
+        <div class="col-md-4 mt-4">
+        <p>{{image.user.user.username|title}}</p>
+          <div class="card">
+            <a href="{% url 'image' image.id %}"><img src="{{image.gallery_image.url}}" style="width:100%;height:56%;" class="img-responsive" alt="Image"></a>
+            <p class="pl-2"><strong>Caption:</strong> {{image.image_caption}}</p>
+            <p class="pl-2"><strong>Posted:</strong> {{image.pub_date}}</p>  <br><br>  
           </div>
         </div>
         {% endfor %}
-    
       </div>
-    </div>
-    
-
-
-
-
-
-
-
-    <!-- <hr class="mt-4">
-    <div class="card-columns">
-        {% for image in user_images %}
-        <div class="card">
-            <div class="card-body parent ">
-                <div class="im">
-                <img src="{{image.gallery_image.url}}" alt="{{image.image_caption}}" class="card-img">
-                <p id="overlay"class="text"> 
-                    <i class="fas fa-heart" style="color:; font-size: 18"></i> 
-                    <span style="color: ">{{image.likes.count}}</span>
-                     <i class="fas fa-comment ml-4" style="color: white"></i> <span style="color: ">{{image.comments.count}}</span></p>
-            
-                    </div>
-                    </div>
-        </div>
-        {% endfor %}
-    </div>
-</div> -->
-
+</div>
 {% endblock %}
