remove whitespaces in code

--- a/instaapp/templates/search.html
+++ b/instaapp/templates/search.html
@@ -1,59 +1,32 @@
 {%extends 'base.html'%} 
 {% block content %}
-
-
-<style>
-    .zoom {
-      transition: transform .2s; 
-    }
-    
-    .zoom:hover {
-      transform: scale(1.02); 
-      border: 3px solid #298505;
-      overflow: hidden;  
-    }
-    </style>
-
-
-
 <div class="container">
-
   <div class="row text-center">
     {% if profiles%}
-      <h2>Found {{ profiles|length }} of searched term {{message}}</h2>
+      <h2>Found {{ profiles|length }} user with searched term '{{message}}'</h2>
     {% else %}
       <h2> Found 0 profiles for the search term {{message}}</h2>
     {% endif %}
-
   </div>
-
-  <div class="row">
-
-  {% if profiles %}
-  <div class="container">
+</div>
+<div class="container">
     <div class="row">
-    {% for profile in profiles %}
-    <div class="col-md-4 mt-3">
-        
-      <div class="card">
-          
-           <img src="{{profile.user.profile.profile_photo.url}}" style="width:200px"></a>
-        <div class="media-body">
-          <h2 class="account-heading">{{ profile.user.username }}</h2>
+        <div class="col-mb-4 mt-3">
+        {% if profiles %}
+        {% for profile in profiles %}
+        <a href="{% url 'user_profile' user.username  %}">
+        <div class="card">          
+           <img src="{{profile.user.profile.profile_photo.url}}" style="width:200px">
+           <div class="media-body">
+           <h2 class="account-heading">{{ profile.user.username }}</h2>
           <p class="text-secondary">{{ profile.user.email }}</p>
         </div>
-      </div>
-
-
-      <span class="mr-5"> <strong>{{ profile.user.profile.followers.count }}</strong> followers</span>
-                                <span class="mr-5"> <strong>{{ profile.user.profile.following.count }}</strong> following</span>
-      </div>
+        <span class="mr-5"> <strong>{{ profile.user.profile.followers.count }}</strong> followers</span>
+        <span class="mr-5"> <strong>{{ profile.user.profile.following.count }}</strong> following</span>
+        </div></a><br>
+        {% endfor %}
+        </div>
     </div>
-    {% endfor %}
-
-  </div>
 </div>
-  {% endif %}
-  </div>
-</div>
+{% endif %}
 {% endblock %}
