--- a/instaapp/templates/comment.html
+++ b/instaapp/templates/comment.html
@@ -1,4 +1,5 @@
 {%extends 'base.html'%}
+{%load crispy_forms_tags%}
 {% block content %}
 {{block.super}}
 <div class="container" style="margin-top:10rem;">
@@ -7,7 +8,7 @@
             <form action="{% url 'comment' image_id=image.id %}" method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
 
-                {% bootstrap_form form %}
+                {{ form|crispy }}
                 <input type="submit" class="btn btn-primary btn-sm" value="Add Comment">
             </form>
         </div>
