--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-2">
-            <div class="card-title text-secondary mt-2 mr-2 ml-2 ">Suggestions</div>
+            <div class="card-title text-secondary mt-2 mr-2 ml-2 ">Suggestions For You</div>
             {% for user in users %}
             <div class="col-md-2 mr-3 mt-1 mb-2">
                 <img class="rounded-circle" src="{{ user.profile.profile_picture.url }}" width="45px" height="45px">
@@ -31,9 +31,9 @@
                     <br><br>
                     <p><strong>Caption:</strong> {{image.image_caption}}</p>
                     <p><strong>Posted:</strong> {{image.pub_date}}</p> 
+                    <em><p><strong>Comments:</strong></p></em>
                 {% for comment in comments %}
                     {% if comment.image_id == image.id%}
-                    <p><strong>Comments:</strong></p>
                         <p><strong>{{comment.user}}:</strong> {{comment.comment}}</p>
                         <p>{{comment.posted | timesince}}</p><hr>
                     {% endif %}
@@ -56,5 +56,5 @@
             </form>
         </div>
     </div>
-</div>
+</div><br><br><br><br><br><br>
 {% endblock %}
