--- a/instaapp/templates/index.html
+++ b/instaapp/templates/index.html
@@ -10,7 +10,7 @@
             <div class="card-title text-secondary mt-2 mr-2 ml-2 ">Suggestions For You</div>
             {% for user in users %}
             <div class="col-md-2 mr-3 mt-1 mb-2">
-                <img class="rounded-circle" src="{{ user.profile.profile_picture.url }}" width="45px" height="45px">
+                <img class="rounded-circle" src="{{ user.profile.profile_photo.url }}" width="45px" height="45px">
             </div>
             <div class="col-md-6 mr-2 mt-2">
                 <span><a href="{% url 'user_profile' user.username  %}">{{user.username}}</a></span>
